--- a/基础教程/05.html
+++ b/基础教程/05.html
@@ -17,7 +17,8 @@
       <div class="col-md-8">
 
         <h1 class="page-header">主体 (col-md-8)</h1>
-        <p class="visible-xs alert alert-info">下载下载下载下载下载</p>
+        <p class="visible-xs alert alert-info">(visible-xs)下载下载下载下载下载</p>
+        <p class="hidden-xs alert alert-info">(hidden-xs)上传上传上传上传上传</p>
         <p>study BootStrap study BootStrap study BootStrap study BootStrap study BootStrap study BootStrap study
           BootStrap
           study BootStrap study BootStrap
